fix rendering of result headers and first paragraph
It is very subtle to get a header to run into a paragraph correctly; the
prior solution resulted in some misalignment at different screen sizes.
The new solution is to get rid of `float:left`, and set both the header and
the immediately-subsequent paragraph to be `display:inline`.

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -73,9 +73,12 @@ header.post-header {
 }
 
 header.inline {
-  float: left;
   display: inline;
-  margin-right: 1ex;
+  margin-right: .5ex;
+}
+
+header.inline + p {
+  display: inline;
 }
 
 header.inline .numbering {
